@@ -3368,26 +3368,26 @@ void on_data_model_entry_changed (GtkEditable *editable, gpointer user_data)
 			if (i == 0) gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (readout_widget), FALSE);
 			gtk_widget_set_sensitive (readout_widget, FALSE);
 			}
-		/* 2. Gravity brightening GR2 is constrained:                             */
+		/* 2. Gravity brightening GR2 is not constrained:                         */
 		for (i = 0; i < 6; i++)
 			{
 			readout_widget = lookup_widget (PHOEBE, gr2[i]);
-			if (i == 0) gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (readout_widget), FALSE);
-			gtk_widget_set_sensitive (readout_widget, FALSE);
+			if (i == 0) gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (readout_widget), TRUE);
+			gtk_widget_set_sensitive (readout_widget, TRUE);
 			}
-		/* 3. Bolometric albedo ALB2 is constrained:                              */
+		/* 3. Bolometric albedo ALB2 is not constrained:                          */
 		for (i = 0; i < 6; i++)
 			{
 			readout_widget = lookup_widget (PHOEBE, alb2[i]);
-			if (i == 0) gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (readout_widget), FALSE);
-			gtk_widget_set_sensitive (readout_widget, FALSE);
+			if (i == 0) gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (readout_widget), TRUE);
+			gtk_widget_set_sensitive (readout_widget, TRUE);
 			}
-		/* 4. Secondary temperature TAVC is constrained:                          */
+		/* 4. Secondary temperature TAVC is not constrained:                      */
 		for (i = 0; i < 6; i++)
 			{
 			readout_widget = lookup_widget (PHOEBE, tavc[i]);
-			if (i == 0) gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (readout_widget), FALSE);
-			gtk_widget_set_sensitive (readout_widget, FALSE);
+			if (i == 0) gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (readout_widget), TRUE);
+			gtk_widget_set_sensitive (readout_widget, TRUE);
 			}
 		/* 5. Secondary star luminosities CLA are constrained:                    */
 		for (i = 0; i < 4; i++)
