@@ -1,4 +1,5 @@
-2004-10-21:	PHOEBE_0.26 beta version released.
+2005-05-30:	PHOEBE_0.27 stable version released.
+2004-10-21:	PHOEBE_0.26 stable version released.
 2004-07-23:	PHOEBE_0.25 beta version released.
 2004-05-03:	PHOEBE_0.24 beta version released.
 2004-04-14:	PHOEBE_0.23 beta version released.
